--- a/src/Work/Work.css
+++ b/src/Work/Work.css
@@ -8,6 +8,7 @@
   box-shadow: 0 17px 50px 0 rgb(0 0 0 / 19%), 0 12px 15px 0 rgb(0 0 0 / 24%);
 
   background-color: #fdf1e7;
+  margin-bottom: 50px;
 }
 .work-wrapper {
   padding: 30px;
@@ -17,4 +18,75 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.header-projects {
+  font-size: 30px;
+  font-style: italic;
+  font-weight: 800;
+  color: #f4a261ff;
+  text-decoration: underline;
+}
+.work-screens-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  text-align: center;
+}
+.carousel img {
+  margin: 10px;
+  height: 300px;
+  width: 500px;
+}
+.carousel-control-next,
+.carousel-control-prev {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25%;
+  padding: 0;
+  color: black;
+  text-decoration: none;
+  text-align: center;
+  background: 0 0;
+  border: 0;
+  opacity: 0.5;
+  transition: opacity 0.15s ease;
+}
+.sr-only {
+  display: none;
+}
+.carousel-control-next-icon {
+  background-image: url('https://res.cloudinary.com/dii3cculv/image/upload/v1631648682/arrow-right_i6lhsv.png');
+}
+.carousel-control-prev-icon {
+  background-image: url('https://res.cloudinary.com/dii3cculv/image/upload/v1631648636/angle_zfmdop.png');
+}
+.work-button-row {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+  padding-bottom: 15px;
+}
+.buttons-work--1,
+.buttons-work--2 {
+  text-align: center;
+  background-color: #f4a261ff;
+  color: whitesmoke;
+  border-radius: 5px;
+  padding: 5px;
+  width: 150px;
+  box-shadow: 0 2px 50px 0 rgb(0 0 0 / 19%), 0 6px 10px 0 rgb(0 0 0 / 24%);
+  cursor: pointer;
+  margin-top: 10px;
+  margin-right: 80px;
+  transition: all 0.3s ease-in-out;
+}
+.buttons-work--1:hover,
+.buttons-work--2:hover {
+  transform: scale(0.9);
 }
