--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -8,13 +8,29 @@
   box-shadow: 0 17px 50px 0 rgb(0 0 0 / 19%), 0 12px 15px 0 rgb(0 0 0 / 24%);
 
   background-color: #fcece9;
+  margin-bottom: 50px;
 }
 .contact-wrapper {
   padding: 30px;
 }
+.contact--header {
+  display: block !important;
+  font-size: 30px;
+  font-style: italic;
+  font-weight: 800;
+  color: #e76f51ff;
+  text-decoration: underline;
+}
 .column-left-contact {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.contact-col-right {
+  margin-top: 30px;
+  flex-direction: column;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
