--- a/src/Flip/Cards.css
+++ b/src/Flip/Cards.css
@@ -2,9 +2,19 @@
   padding-left: 80px;
   padding-right: 80px;
   /* width: 100vw; */
-  /* margin-top: 100px; */
+  margin-top: -120px;
   background-color: #daddff;
   display: flex;
+  flex-direction: row;
   align-items: center;
+  margin-bottom: -90px;
   /* justify-content: space-around; */
+}
+@media (max-width: 1015px) {
+  .cardsMainCont {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    margin-bottom: 100px;
+  }
 }
