--- a/src/Flip/Flip.css
+++ b/src/Flip/Flip.css
@@ -1,4 +1,3 @@
-/* CSS reset */
 *,
 *::after,
 *::before {
@@ -17,21 +16,14 @@ body {
   position: relative;
 }
 
-/* Typography =======================*/
-
-/* Headings */
-
-/* Main heading for card's front cover */
 .card-front__heading {
   font-size: 2rem;
   font-weight: 800;
   margin-top: 0.25rem;
 }
 
-/* Main heading for inside page */
 .inside-page__heading {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding: 1rem;
   width: 100%;
   font-size: 2rem;
   font-weight: 800;
@@ -69,8 +61,6 @@ body {
   color: #e76f51ff;
 }
 
-/* Front cover */
-
 .card-front__tp {
   color: #fafbfa;
 }
@@ -87,6 +77,12 @@ body {
   padding: 10px;
 }
 .inside-page__text--work {
+  color: #333;
+  font-size: 18px;
+  font-style: italic;
+  padding: 10px;
+}
+.inside-page__text--contact {
   color: #333;
   font-size: 18px;
   font-style: italic;
@@ -379,4 +375,68 @@ li {
 
 .card:hover .inside-page {
   box-shadow: inset 1rem 0px 5rem -2.5rem rgba(0, 0, 0, 0.1);
+}
+@media (max-width: 1015px) {
+  .card-area {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    height: 100px !important;
+  }
+  .main {
+    height: 360px;
+  }
+}
+
+@media (max-width: 432px) {
+  .card {
+    width: 16rem;
+  }
+  .flip-card {
+    width: 16rem;
+  }
+  .card-front {
+    width: 16rem;
+  }
+  .card-back {
+    width: 140px;
+    background-color: #fafbfa;
+    box-shadow: inset 1rem 0px 5rem -2.5rem rgba(0, 0, 0, 0.25);
+    transform: rotateY(180deg);
+  }
+  .inside-page {
+    width: 16rem;
+    z-index: 1;
+  }
+  .inside-page__text--me {
+    color: #333;
+    font-size: 16px;
+    text-align: left;
+  }
+  .inside-page__text--contact {
+    color: #333;
+    font-size: 16px;
+  }
+  .inside-page__heading {
+    padding: 0.6rem;
+    width: 100%;
+    font-size: 2rem;
+    font-weight: 800;
+  }
+  .tick-icon {
+    color: #264653ff;
+    font-size: 20px;
+  }
+  li {
+    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+  .inside-page__text--work {
+    color: #333;
+    font-size: 18px;
+    font-style: italic;
+    padding: 5px;
+  }
 }
