--- a/src/MyNav/MyNav.css
+++ b/src/MyNav/MyNav.css
@@ -3,10 +3,14 @@
   color: #d3d6db;
   -webkit-box-shadow: 9px 6px 15px -2px #000000;
   box-shadow: 9px 6px 15px -2px #000000;
-
+  display: none;
   position: sticky;
   top: 0;
   z-index: 300;
+}
+#header-nav {
+  font-size: 26px;
+  padding-left: 20px;
 }
 .links-navbar {
   font-size: 20px;
@@ -26,4 +30,9 @@
   box-shadow: 0 17px 50px 0 rgb(0 0 0 / 19%), 0 12px 15px 0 rgb(0 0 0 / 24%);
   color: #d3d6db;
   border-bottom: 2px solid black;
+}
+@media (max-width: 991px) {
+  #my-nav {
+    display: block;
+  }
 }
