--- a/src/Skills/Skills.css
+++ b/src/Skills/Skills.css
@@ -8,13 +8,94 @@
   box-shadow: 0 17px 50px 0 rgb(0 0 0 / 19%), 0 12px 15px 0 rgb(0 0 0 / 24%);
 
   background-color: #eaf8fa;
+  margin-bottom: 50px;
 }
 .skills-wrapper {
-  padding: 30px;
+  padding: 26px;
+}
+.header--skills {
+  font-size: 30px;
+  font-style: italic;
+  font-weight: 800;
+  color: #279eb2;
+  text-decoration: underline;
 }
 .column-left-skills {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.certificates-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  text-align: center;
+}
+#certificates--all {
+  display: none;
+}
+.certificates-row img {
+  margin: 15px;
+  height: 100px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.certificates-row img:hover {
+  transform: scale(0.9);
+}
+.nav-link {
+  display: block;
+  padding: 10px;
+  color: #303841;
+  font-weight: 800;
+  text-decoration: none;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out,
+    border-color 0.2s ease-in-out;
+}
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+  color: whitesmoke;
+  background-color: #279eb2;
+  border-radius: 5px;
+  padding: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  box-shadow: 0 2px 50px 0 rgb(0 0 0 / 19%), 0 6px 10px 0 rgb(0 0 0 / 24%);
+}
+
+.nav-link:hover {
+  color: #303841;
+}
+.nav-tabs .nav-link {
+  background: 0 0;
+  border: none;
+}
+.tick-icon--skills {
+  color: #279eb2;
+  font-size: 30px;
+}
+.buttons-skills--1,
+.buttons-skills--2 {
+  background-color: #279eb2;
+  color: whitesmoke;
+  border-radius: 5px;
+  padding: 5px;
+  width: 200px;
+  box-shadow: 0 2px 50px 0 rgb(0 0 0 / 19%), 0 6px 10px 0 rgb(0 0 0 / 24%);
+  cursor: pointer;
+  margin-top: 10px;
+  margin-right: 80px;
+  transition: all 0.3s ease-in-out;
+}
+
+.buttons-skills--2:hover,
+.buttons-skills--1:hover {
+  transform: scale(0.9);
+}
+.buttons-skills--1 {
+  margin-right: 80px;
 }
