--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,14 @@ body {
 html {
   scroll-behavior: smooth;
 }
+::-webkit-scrollbar {
+  width: 15px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px grey;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: #3a4750;
+  border-radius: 10px;
+}
