--- a/src/Flip/Flip.css
+++ b/src/Flip/Flip.css
@@ -428,6 +428,21 @@ li {
     color: #264653ff;
     font-size: 20px;
   }
+  .inside-page__btn {
+    background-color: transparent;
+    border: 2px solid;
+    border-radius: 0.5rem;
+    font-size: 1.3rem;
+    font-weight: 600;
+    /* margin-top: 2rem; */
+    overflow: hidden;
+    padding: 0.1rem 0.1rem;
+    position: relative;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    width: 90%;
+    z-index: 10;
+  }
   li {
     padding-right: 5px;
     padding-top: 5px;
