--- a/src/Flip/Flip.css
+++ b/src/Flip/Flip.css
@@ -376,6 +376,10 @@ li {
 .card:hover .inside-page {
   box-shadow: inset 1rem 0px 5rem -2.5rem rgba(0, 0, 0, 0.1);
 }
+.qr-code {
+  width: 150px;
+  margin-top: 60px;
+}
 @media (max-width: 1015px) {
   .card-area {
     display: flex;
@@ -392,6 +396,10 @@ li {
 @media (max-width: 432px) {
   .card {
     width: 16rem;
+  }
+  .qr-code {
+    width: 140px;
+    margin-top: 60px;
   }
   .flip-card {
     width: 16rem;
