--- a/src/Work/Work.css
+++ b/src/Work/Work.css
@@ -90,3 +90,42 @@
 .buttons-work--2:hover {
   transform: scale(0.9);
 }
+.what-wine {
+  font-size: 26px;
+}
+.grape-icon {
+  padding-bottom: 10px;
+  font-size: 46px;
+}
+.work--icon {
+  height: 80px;
+}
+@media (max-width: 585px) {
+  .header-projects {
+    font-size: 20px;
+  }
+  .what-wine {
+    font-size: 20px;
+  }
+  .grape-icon {
+    padding-bottom: 10px;
+    font-size: 36px;
+  }
+  .projects-description {
+    font-size: 16px;
+  }
+  .buttons-work--1,
+  .buttons-work--2 {
+    font-size: 16px;
+
+    width: 100px;
+    box-shadow: 0 2px 50px 0 rgb(0 0 0 / 19%), 0 6px 10px 0 rgb(0 0 0 / 24%);
+    cursor: pointer;
+    margin-top: 10px;
+
+    transition: all 0.3s ease-in-out;
+  }
+  .work--icon {
+    height: 50px;
+  }
+}
