--- a/src/Me/Me.css
+++ b/src/Me/Me.css
@@ -11,12 +11,54 @@
   background-color: #eef4f7;
   border-radius: 20px;
   box-shadow: 0 17px 50px 0 rgb(0 0 0 / 19%), 0 12px 15px 0 rgb(0 0 0 / 24%);
+  margin-bottom: 50px;
 }
 .photo-wrapper {
   padding: 30px;
+}
+.header--me {
+  padding-left: 10px;
+  font-size: 30px;
+  font-style: italic;
+  font-weight: 800;
+  color: #264653ff;
+  text-decoration: underline;
 }
 .column-photo {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.description-me {
+  padding: 10px;
+  margin-top: 10px;
+}
+.me-photo {
+  height: 260px;
+  border-radius: 50px;
+}
+.fragment-1 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.me-list {
+  padding: 0;
+  list-style-type: none;
+}
+.star-icon {
+  color: goldenrod;
+}
+
+@media (max-width: 585px) {
+  .header--me {
+    font-size: 20px;
+  }
+  .description-me {
+    padding: 10px;
+    font-size: 16px;
+  }
+  .me-photo {
+    height: 180px;
+    border-radius: 50px;
+  }
 }
